# dev-cleaner

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: cleaner.rs  main.rs  scanner.rs  utils.rs
src/languages/: cpp.rs  java.rs  mod.rs  node.rs  python.rs  rust_lang.rs
