[package]
name = "sweepkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A blazing-fast CLI tool to scan and clean unused dev dependencies across all ecosystems"
license = "MIT"
repository = "https://github.com/BryanBradfo/sweepkit"
keywords = ["cli", "developer-tools", "cleaner", "disk-space", "node-modules"]
categories = ["command-line-utilities", "development-tools"]
authors = ["BryanBradfo"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
colored = "2.1"
indicatif = "0.17"
bytesize = "1.3"
dialoguer = "0.11"
dirs = "5.0"
